--- a/views/layout.pug
+++ b/views/layout.pug
@@ -102,7 +102,7 @@ head
         block content
       footer.footer
         .footer-content
-          p.m-b-0 Copyright &copy; @2020 Chainos Solution. All rights reserved.
+          p.m-b-0 Copyright &copy; @2021 Talken All rights reserved.
           span
             a.text-gray.m-r-15(href='#') Term &amp; Conditions
             a.text-gray(href='#') Privacy &amp; Policy
