--- a/views/layout.pug
+++ b/views/layout.pug
@@ -65,6 +65,11 @@ head
               span.icon-holder
                 i.anticon.anticon-team
               span.title User
+          li.nav-item.dropdown(class='company')
+            a.dropdown-toggle(href='/company')
+              span.icon-holder
+                i.anticon.anticon-team
+              span.title Company             
           li.nav-item.dropdown
             a.dropdown-toggle(href='javascript:void(0);')
               span.icon-holder
