--- a/views/layout.pug
+++ b/views/layout.pug
@@ -123,7 +123,7 @@ script(src='assets/vendors/datatables/dataTables.bootstrap.min.js')
 script(src='assets/js/pages/datatables.js')
 script(src='assets/js/daterangepicker.min.js')
 script(src='vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js')
-script(src='http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js')
+script(src='https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js')
 script(src='assets/js/api.js')
 script(src='assets/js/window.js')
 script(src='https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js')
