First commit, Add ipCheck

--- a/views/old_ui/home.pug
+++ b/views/old_ui/home.pug
@@ -22,25 +22,25 @@ html
                         {
                             src: '../images/user-icon.png',
                             title: 'User management',
-                            href: 'user-management',
+                            href: '/admp/user-management',
                             active: false
                         },
                         {
                             src: '../images/product-icon.png',
                             title: 'Product management',
-                            href: 'product-management',
+                            href: '/admp/product-management',
                             active: false
                         },
                         {
                             src: '../images/edition-icon.png',
                             title: 'Edition management',
-                            href: 'edition-management',
+                            href: '/admp/edition-management',
                             active: false
                         },
                         {
                             src: '../images/dashboard-icon.png',
                             title: 'Transaction management',
-                            href: 'transaction-management',
+                            href: '/admp/transaction-management',
                             active: false
                         }
                     ]
