--- a/views/product/airdrop.pug
+++ b/views/product/airdrop.pug
@@ -108,4 +108,4 @@ block modal
               button.btn.btn-danger.btn-tone.filter-reset-btn.remove-filter(style='width: 100%') Reset
 
 block js
-  script(src='assets/js/page/airdrop.js')
+  script(src='/assets/js/page/airdrop.js')
