--- a/views/sign_in.pug
+++ b/views/sign_in.pug
@@ -4,11 +4,11 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
   title NTF - Login
   // Favicon
-  link(rel='shortcut icon' href='assets/images/logo.png')
+  link(rel='shortcut icon' href='/assets/images/logo.png')
   // page css
-  link(href='assets/css/style.css' rel='stylesheet')
+  link(href='/assets/css/style.css' rel='stylesheet')
   // Core css
-  link(href='assets/css/app.min.css' rel='stylesheet')
+  link(href='/assets/css/app.min.css' rel='stylesheet')
 .dynamic-bg
   ul.bg-bubbles
     li
@@ -25,7 +25,7 @@ head
     li
     li
 .app.login
-  .container-fluid.p-h-0.p-v-20.bg.full-height.d-flex(style="background-image: url('assets/images/others/login-3.png')")
+  .container-fluid.p-h-0.p-v-20.bg.full-height.d-flex(style="background-image: url('/assets/images/others/login-3.png')")
     .d-flex.flex-column.justify-content-between.w-100
       .container.d-flex.h-100
         .row.align-items-center.w-100
@@ -59,9 +59,9 @@ head
                         a.small(href='#')  Signup
                       button.btn.btn-primary.btn-login(atr='Login' type='button') Sign In
 // Core Vendors JS
-script(src='assets/js/vendors.min.js')
+script(src='/assets/js/vendors.min.js')
 // page js
-script(src='assets/js/api.js')
-script(src='assets/js/page/login.js')
+script(src='/assets/js/api.js')
+script(src='/assets/js/page/login.js')
 // Core JS
-script(src='assets/js/app.min.js')
+script(src='/assets/js/app.min.js')
