--- a/views/company/index.pug
+++ b/views/company/index.pug
@@ -97,4 +97,4 @@ block modal
               button.btn.btn-danger.btn-tone.filter-reset-btn.remove-filter(style='width: 100%') Reset
 
 block js
-  script(src='assets/js/page/company.js')
+  script(src='/assets/js/page/company.js')
