--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -26,7 +26,7 @@ html
                     div.sidebar-sticky
                         ul.nav.flex-column
                             li.nav-item
-                                a.nav-link(href='/user')#user_current
+                                a.nav-link(href='/admp/user')#user_current
                                     span(data-feather='user')
                                     | User Management 
                             li.nav-item
