--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,23 +3,23 @@ head
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
   title NFT Talken
-  link(rel='shortcut icon' href='assets/images/logo.png')
+  link(rel='shortcut icon' href='/assets/images/logo.png')
   link(href='//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css' rel='stylesheet')
-  link(href='assets/css/style.css' rel='stylesheet')
-  link(href='assets/vendors/datatables/dataTables.bootstrap.min.css' rel='stylesheet')
-  link(href='vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css' rel='stylesheet')
-  link(href='assets/css/app.min.css' rel='stylesheet')
+  link(href='/assets/css/style.css' rel='stylesheet')
+  link(href='/assets/vendors/datatables/dataTables.bootstrap.min.css' rel='stylesheet')
+  link(href='/vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css' rel='stylesheet')
+  link(href='/assets/css/app.min.css' rel='stylesheet')
 .app
   .layout
     .header
       .logo.logo-dark
-        a(href='/')
-          img(src='assets/images/logo.png' alt='Logo')
-          img.logo-fold(src='assets/images/logo-fold.png' alt='Logo')
+        a(href='/admp')
+          img(src='/assets/images/logo.png' alt='Logo')
+          img.logo-fold(src='/assets/images/logo-fold.png' alt='Logo')
       .logo.logo-white
-        a(href='/')
-          img(src='assets/images/logo/logo-white.png' alt='Logo')
-          img.logo-fold(src='assets/images/logo/logo-fold-white.png' alt='Logo')
+        a(href='/admp')
+          img(src='/assets/images/logo/logo-white.png' alt='Logo')
+          img.logo-fold(src='/assets/images/logo/logo-fold-white.png' alt='Logo')
       .nav-wrap
         ul.nav-left
           li.desktop-toggle
@@ -32,15 +32,15 @@ head
           li.dropdown.dropdown-animated.scale-left
             .pointer(data-toggle='dropdown')
               .avatar.avatar-image.m-h-10.m-r-15
-                img(src='assets/images/avatars/thumb-3.jpg' alt='')
+                img(src='/assets/images/avatars/thumb-3.jpg' alt='')
             .p-b-15.p-t-20.dropdown-menu.pop-profile
               .p-h-20.p-b-15.m-b-10.border-bottom
                 .d-flex.m-r-50
                   .avatar.avatar-lg.avatar-image
-                    img(src='assets/images/avatars/thumb-3.jpg' alt='')
+                    img(src='/assets/images/avatars/thumb-3.jpg' alt='')
                   .m-l-10
                     p.m-b-0.admin-name.text-dark.font-weight-semibold.admin-name Marshall Nichols
-              a.dropdown-item.d-block.p-h-15.p-v-10(href='/profile')
+              a.dropdown-item.d-block.p-h-15.p-v-10(href='/admp/profile')
                 .d-flex.align-items-center.justify-content-between
                   div
                     i.anticon.opacity-04.font-size-16.anticon-user
@@ -56,17 +56,17 @@ head
       .side-nav-inner
         ul.side-nav-menu.scrollable
           li.nav-item.dropdown
-            a.dropdown-toggle(href='/')
+            a.dropdown-toggle(href='/admp')
               span.icon-holder
                 i.anticon.anticon-dashboard
               span.title Dashboard
           li.nav-item.dropdown(class='user')
-            a.dropdown-toggle(href='/user')
+            a.dropdown-toggle(href='/admp/user')
               span.icon-holder
                 i.anticon.anticon-team
               span.title User
           li.nav-item.dropdown(class='company')
-            a.dropdown-toggle(href='/company')
+            a.dropdown-toggle(href='/admp/company')
               span.icon-holder
                 i.anticon.anticon-team
               span.title Company             
@@ -79,26 +79,26 @@ head
                 i.arrow-icon
             ul.dropdown-menu
               li(class='nft')
-                a(href='/nft') NFTs 
+                a(href='/admp/nft') NFTs 
               li(class='airdrop')
-                a(href='/airdrop') AirDrop
+                a(href='/admp/airdrop') AirDrop
           li.nav-item.dropdown(class='serial')
-            a.dropdown-toggle(href='/serials')
+            a.dropdown-toggle(href='/admp/serials')
               span.icon-holder
                 i.anticon.anticon-highlight
               span.title Serials
           li.nav-item.dropdown(class='transaction')
-            a.dropdown-toggle(href='/transaction')
+            a.dropdown-toggle(href='/admp/transaction')
               span.icon-holder
                 i.anticon.anticon-credit-card
               span.title Transaction
           li.nav-item.dropdown(class='collection')
-            a.dropdown-toggle(href='/collection')
+            a.dropdown-toggle(href='/admp/collection')
               span.icon-holder
                 i.anticon.anticon-copyright
               span.title Collection
           li.nav-item.dropdown(class='reward')
-            a.dropdown-toggle(href='/reward')
+            a.dropdown-toggle(href='/admp/reward')
               span.icon-holder
                 i.anticon.anticon-gift
               span.title Reward
@@ -116,19 +116,19 @@ head
     #notification-error.notification-group.top-right
 block modal
 
-script(src='assets/js/vendors.min.js')
-script(src='assets/js/pagination.js')
-script(src='assets/vendors/datatables/jquery.dataTables.min.js')
-script(src='assets/vendors/datatables/dataTables.bootstrap.min.js')
-script(src='assets/js/pages/datatables.js')
-script(src='assets/js/daterangepicker.min.js')
-script(src='vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js')
+script(src='/assets/js/vendors.min.js')
+script(src='/assets/js/pagination.js')
+script(src='/assets/vendors/datatables/jquery.dataTables.min.js')
+script(src='/assets/vendors/datatables/dataTables.bootstrap.min.js')
+script(src='/assets/js/pages/datatables.js')
+script(src='/assets/js/daterangepicker.min.js')
+script(src='/vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js')
 script(src='https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js')
-script(src='assets/js/api.js')
-script(src='assets/js/window.js')
+script(src='/assets/js/api.js')
+script(src='/assets/js/window.js')
 script(src='https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js')
 block js
-script(src='assets/js/app.min.js')
+script(src='/assets/js/app.min.js')
 script(src='//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js')
 script(src='//cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js')
 script(src='//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.24/moment-timezone.min.js')
