--- a/views/reward/index.pug
+++ b/views/reward/index.pug
@@ -88,4 +88,4 @@ block modal
               button.btn.btn-danger.btn-tone.filter-reset-btn.remove-filter(style='width: 100%') Reset
 
 block js
-  script(src='assets/js/page/reward.js')
+  script(src='/assets/js/page/reward.js')
