--- a/views/serial/index.pug
+++ b/views/serial/index.pug
@@ -102,4 +102,4 @@ block modal
               button.btn.btn-danger.btn-tone.filter-reset-btn.remove-filter(style='width: 100%') Reset
 
 block js
-  script(src='assets/js/page/serial.js')
+  script(src='/assets/js/page/serial.js')
